src/BRepExtrema/BRepExtrema_ExtCF.cxx
@@ -45,6 +45,9 @@ BRepExtrema_ExtCF::BRepExtrema_ExtCF(const TopoDS_Edge& E, const TopoDS_Face& F)
 void BRepExtrema_ExtCF::Initialize(const TopoDS_Edge& E, const TopoDS_Face& F)
 {
   BRepAdaptor_Surface Surf(F);
+  if (Surf.GetType() == GeomAbs_OtherSurface ||
+      !BRep_Tool::IsGeometric(E))
+    return; // protect against non-geometric type (e.g. triangulation)
   BRepAdaptor_Curve aC(E);
   myHS = new BRepAdaptor_HSurface(Surf);
   Standard_Real aTolC, aTolS;
@@ -72,6 +75,9 @@ void BRepExtrema_ExtCF::Perform(const TopoDS_Edge& E, const TopoDS_Face& F2)
   mySqDist.Clear();
   myPointsOnS.Clear();
   myPointsOnC.Clear();
+
+  if (myHS.IsNull())
+    return; // protect against non-geometric type (e.g. triangulation)
 
   Standard_Real U1, U2;
   BRep_Tool::Range(E, U1, U2);
